--- a/难点.md
+++ b/难点.md
@@ -16,3 +16,65 @@
 - 虚拟 DOM 的实现就是普通对象包含 tag、data、children 等属性对真实节点的描述。（本质上就是在 JS 和 DOM 之间的一个缓存）
 - Vue2 的 Virtual DOM 借鉴了开源库 snabbdom 的实现。
 - VirtualDOM 映射到真实 DOM 要经历 VNode 的 create、diff、patch 等阶段。
+
+### vue 和 react 的区别
+
+react 整体是函数式的思想，把组件设计成纯组件，状态和逻辑通过参数传入，所以在 react 中，是单向数据流，推崇结合 immutable 来实现数据不可变。react 在 setState 之后会重新走渲染的流程，如果 shouldComponentUpdate 返回的是 true，就继续渲染，如果返回了 false，就不会重新渲染
+而 vue 的思想是响应式的，也就是基于是数据可变的，通过对每一个属性建立 Watcher 来监听，当属性变化的时候，响应式的更新对应的虚拟 dom
+
+react 的思路是 all in js，通过 js 来生成 html，所以设计了 jsx，还有通过 js 来操作 css，社区的 styled-component、jss
+vue 是把 html，css，js 组合到一起，用各自的处理方式，vue 有单文件组件，可以把 html、css、js 写到一个文件中，html 提供了模板引擎来处理
+react 自带的 api 很少和 ts 配合在一起更好而 vue 是声明式的写法，通过传入各种 options，api 和参数都很多。所以 react 结合 typescript 更容易一起写，vue 稍微复杂。
+react 整体的思路就是函数式，所以推崇纯组件，数据不可变，单向数据流，当然需要双向的地方也可以做到，比如结合 redux-form，而 vue 是基于可变数据的，支持双向绑定。react 组件的扩展一般是通过高阶组件，而 vue 组件会使用 mixin。vue 内置了很多功能，而 react 做的很少，很多都是由社区来完成的，vue 追求的是开发的简单，而 react 更在乎方式是否正确。
+
+### ts interface 和 type 的区别
+
+type 可以声明基本类型别名，联合类型，元组等类型
+type 语句中还可以使用 typeof 获取实例的 类型进行赋值
+
+```js
+let div = document.createElement("div");
+type B = typeof div;
+```
+
+interface 能够声明合并
+
+```js
+interface User {
+ name: string
+ age: number
+}
+
+interface User {
+ sex: string
+}
+
+/*
+User 接口为 {
+ name: string
+ age: number
+ sex: string
+}
+*/
+
+```
+
+实现继承的方式不同 interface 是 extends 而 type 是 & 效果类似的
+type 可以定义数组中每个位置的类型
+type PetList = [Dog, Pet]
+
+### rem
+
+```js
+function setRem() {
+  let doc = document.documentElement;
+  let width = doc.getBoundingClientRect().width;
+
+  // 假设设计稿为宽 750，则 1rem 代表 10px
+  let rem = width / 75;
+  doc.style.fontSize = rem + "px";
+}
+
+// 监听窗口变化
+addEventListener("resize", setRem);
+```
