--- a/难点.md
+++ b/难点.md
@@ -59,7 +59,7 @@ User 接口为 {
 
 ```
 
-实现继承的方式不同 interface 是 extends 而 type 是 & 效果类似的
+实现继承的方式不同 interface 是 extends 而 type 是 & 效果类似的(交叉类型)
 type 可以定义数组中每个位置的类型
 type PetList = [Dog, Pet]
 
@@ -78,3 +78,7 @@ function setRem() {
 // 监听窗口变化
 addEventListener("resize", setRem);
 ```
+
+### MVVM
+
+view modal viewModal
