--- a/难点.md
+++ b/难点.md
@@ -82,3 +82,12 @@ addEventListener("resize", setRem);
 ### MVVM
 
 view modal viewModal
+
+### webpack 打包原理
+
+webpack 打包原理是根据文件间的依赖关系对其进行静态分析，然后将这些模块按指定规则生成静态资源，当 webpack 处理程序时，它会递归地构建一个依赖关系图(dependency graph)，其中包含应用程序需要的每个模块，然后将所有这些模块打包成一个或多个 bundle。
+
+### xss csrf
+
+CSRF：需要用户先登录网站 A，获取 cookie。XSS：不需要登录。
+CSRF：是利用网站 A 本身的漏洞，去请求网站 A 的 api。XSS：是向网站 A 注入 JS 代码，然后执行 JS 里的代码，篡改网站 A 的内容
