--- a/难点.md
+++ b/难点.md
@@ -16,6 +16,9 @@
 - 虚拟 DOM 的实现就是普通对象包含 tag、data、children 等属性对真实节点的描述。（本质上就是在 JS 和 DOM 之间的一个缓存）
 - Vue2 的 Virtual DOM 借鉴了开源库 snabbdom 的实现。
 - VirtualDOM 映射到真实 DOM 要经历 VNode 的 create、diff、patch 等阶段。
+- 为什么直接操作 dom 效率低？
+  答：“因为 DOM 是属于渲染引擎中的东西，而 JS 又是 JS 引擎中的东西。当我们通过 JS 操作 DOM 的时候，其实这个操作涉及到了两个线程之间的通信，那么势 必会带来一些性能上的损耗。操作 DOM 次数一多，也就等同于一直在进行线程之间的通信，并且操作 DOM 可能还会带来重绘回流的情况，所以也就导致了性能上的问题。
+  ”
 
 ### vue 和 react 的区别
 
