--- a/面试的未答到的点.md
+++ b/面试的未答到的点.md
@@ -13,7 +13,8 @@
 ### npm 问题
 
 npm 版本问题
-1：1.2.5 大版本号 次版本号 小版本号
+1：1.2.5 大版本号 次版本号 修订号 (向下兼容)
+
 2:package
 
 - '~'代以安装到次版本最高的包的版本 例如 ~1.2.5 安装到 1.2.9 1.2.x
@@ -21,3 +22,5 @@ npm 版本问题
 - 不添加这两种符号代表安装指定版本
   引入查找规则： 当我们在 js 文件中使用 require()方法引入包时，npm 搜索会先从当前目录的 node_modules 中找，找不到。就往上一级目录找 node_modules。一直往上找到当前磁盘（也就是全局安装的包）。如果都没有。才报错
 - 选择器的优先级
+
+  Websocket 不受同源策略的限制 所以需要在服务端来进行安全校验（ origin 或者借鉴 csrf 的 token 校验机制
