--- a/难点.md
+++ b/难点.md
@@ -102,7 +102,18 @@ XSS：是向网站 A 注入 JS 代码，然后执行 JS 里的代码，篡改网
 
 代码输入，原代码-->词法静态分析-->babylon 进行解析得到 AST 抽象语法树-->plugins 用 babel-traverse 对 AST 树进行遍历转义-->得到新的 AST 语法树-->用 babel-generator 通过 AST 树生成 ES5 代码
 
+### 模块化
 
-ts进阶 
-pick
-omit
+- AMD 依赖于 requirejs,是异步加载的，是提前加载，立即加载
+- CMD 依赖于 seajs ,是异步加载，延后加载，就近加载，用时加载
+- CommonJS 模块 同步导入支持动态导入 输出的是一个值的拷贝 运行时加载
+- Es Module 模块 异步导入 输出的是一个值的引用 编译时输出接口 -加载的差异是因为 CommonJS 加载的是一个对象（即 module.exports 属性），该对象只有在脚本运行结束时才会生成。 -而 ES6 模块不是对象，它的对外接口只是一种静态定义，在代码静态解析阶段就会生成。
+  它们有两个重大差异。
+  CommonJS 模块输出的是一个值的拷贝，ES6 模块输出的是值的引用。
+  CommonJS 模块是运行时加载，ES6 模块是编译时输出接口。
+  第二个差异可以从两个项目的打印结果看出，导致这种差别的原因是：
+  因为 CommonJS 加载的是一个对象（即 module.exports 属性），该对象只有在脚本运行完才会生成。而 ES6 模块不是对象，它的对外接口只是一种静态定义，在代码静态解析阶段就会生成。
+  重点解释第一个差异。
+  CommonJS 模块输出的是值的拷贝，也就是说，一旦输出一个值，模块内部的变化就影响不到这个值
+  看这个文章
+  https://github.com/mqyqingfeng/Blog/issues/108
