--- a/面试的未答到的点.md
+++ b/面试的未答到的点.md
@@ -24,3 +24,9 @@ npm 版本问题
 - 选择器的优先级
 
   Websocket 不受同源策略的限制 所以需要在服务端来进行安全校验（ origin 或者借鉴 csrf 的 token 校验机制
+
+
+// 接下来的学习计划
+- 大话数据结构
+- 设计模式
+- 掘金小册
