--- a/难点.md
+++ b/难点.md
@@ -82,6 +82,21 @@ function setRem() {
 
 // 监听窗口变化
 addEventListener("resize", setRem);
++ sass-rem
+$defaultSize: 32px !default;
+@function rem($px){
+    @return $px / $defaultSize * 1rem;
+}
+html{
+    font-size: 10vw;
+    font-family: "微软雅黑";
+};
+
+.hello{
+    width: rem(130px);
+    height: 100%;
+    background: #2e945a;
+}
 ```
 
 ### MVVM
