--- a/md/极客时间-浏览器原理笔记.md
+++ b/md/极客时间-浏览器原理笔记.md
@@ -26,3 +26,4 @@
 http请求流程
 
 ![image-20210716005939076](C:\Users\彭涛\AppData\Roaming\Typora\typora-user-images\image-20210716005939076.png)
+从图中可以看到，浏览器中的 HTTP 请求从发起到结束一共经历了如下八个阶段：构建请求、查找缓存、准备 IP 和端口、等待 TCP 队列、建立 TCP 连接、发起 HTTP 请求、服务器处理请求、服务器返回请求和断开连接。
